tests/negative/missing_return.sans
// expect-error: undefined
foo() I {
  x = 42
}
main() I { foo() }
